--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=med-widget@no-reply.com
+MAIL_FROM_NAME=Medicine Widget
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
