--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="Laravel"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -32,7 +32,7 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=med-widget@no-reply.com
-MAIL_FROM_NAME=Medicine Widget
+MAIL_FROM_NAME="Widget"
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
